cmake_minimum_required(VERSION 3.0.0)
# message(STATUS ${CMAKE_SYSTEM})
project(test VERSION 0.1.0)
# message(STATUS ${CMAKE_MAKE_PROGRAM})
# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -fexec-charset=GBK")
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fexec-charset=GBK")

aux_source_directory(. CURRENT_SRC_LIST)
aux_source_directory(cpp_learn CURRENT_SRC_LIST)
aux_source_directory(demo CURRENT_SRC_LIST)
include_directories(.)
include_directories(cpp_learn/include)
include_directories(demo/include)
message(STATUS ${CURRENT_SRC_LIST})
add_executable(${PROJECT_NAME} ${CURRENT_SRC_LIST})
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
# target_link_libraries(${PROJECT_NAME} cpp_learn demo)